[package]
name = "hyperloglog"
version = "1.0.1"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Hyperloglog implementation in Rust"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-hyperloglog"
repository = "https://github.com/jedisct1/rust-hyperloglog"

[dependencies]
bytecount = "0.6"
rand = "0.8.0"
serde = { version = "1.0", optional = true }
siphasher = "0.3"

[dev-dependencies]
bincode = "1.3"

[features]
with_serde = ["serde", "siphasher/serde_std"]
default = ["with_serde"]
