[package]
name = "hyperloglog"
version = "1.0.2"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Hyperloglog implementation in Rust"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-hyperloglog"
repository = "https://github.com/jedisct1/rust-hyperloglog"

[dependencies]
bytecount = "0.6"
rand = "0.8.0"
serde = { version = "1.0", optional = true }
siphasher = {git = "https://github.com/LucaCappelletti94/rust-siphash", branch = "mem_dbg"}
mem_dbg = {version = "0.2.2", optional = true}

[dev-dependencies]
bincode = "1.3"

[features]
with_serde = ["serde", "siphasher/serde_std"]
default = []
mem_dbg = ["siphasher/mem_dbg", "dep:mem_dbg"]