[package]
name = "hyperloglog"
version = "1.0.2"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Hyperloglog implementation in Rust"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-hyperloglog"
repository = "https://github.com/jedisct1/rust-hyperloglog"

[dependencies]
bytecount = "0.6"
rand = "0.9.2"
serde = { version = "1.0", optional = true, features = ["derive"] }
siphasher = "1.0"

[dev-dependencies]
bincode = { version = "2.0", features = ["serde"] }

[features]
with_serde = ["dep:serde", "siphasher/serde_std"]
serde = ["with_serde"]
default = []
